--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,11 @@ header {
 
 #hero {
     text-align: center;
+    background-color: #8f6717;
+    padding: 20px;
 }
 
 #hero img {
-    width: 200px;
-    height: 200px;
+    width:200px;
+    height:200px;
 }
