--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header {
     width:200px;
     height:200px;
 }
-
+ /* Biography */
 #bio {
     font-size: large;
 }
@@ -41,10 +41,11 @@ footer {
 #cars img {
     border:2px dashed #350000;
 }
-
+/* hobbies */
 #hobbies {
     text-align: center;
 }
+
 
 #hobbies ul {
     width:50%;
@@ -52,6 +53,7 @@ footer {
     margin-right:auto;
     max-width: 350px;
     min-width: 200px;
+    max-width: 100%;
 }
 
 #hobbies ul li {
@@ -63,4 +65,15 @@ footer {
 }
 #hobbies ul li:nth-child(3n+2) {
     color: red;
+}
+
+/* gallery */
+
+#gallery {
+    border:2px #4F0202 solid;
+    text-align: center;
+}
+
+#gallery img {
+    max-width: 100%;
 }
