--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,44 @@ footer {
 #lit {
     margin: 3em;
 }
+
+/* contact form */
+
+#contact {
+    max-width: 400px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:75px;
+}
+#contact h2 {
+    text-align: center;
+}
+#contact fieldset {
+    border:2px solid #350000;
+    padding:1em;
+    border-radius: 1em;
+    
+}
+
+#contact fieldset legend {
+    background-color: #350000;
+    color:white;
+    padding:7px;
+    border-radius: .5em;
+    text-align: center;
+}
+#contact fieldset {
+    display:grid;
+}
+#contact label {
+    margin:1ex;
+    margin-top: 1ex;
+    margin-bottom: 1ex;
+}
+#contact fieldset fieldset {
+    grid-template-columns: 30px auto;
+
+}
 /* media queries */
 @media screen and (min-width: 300px){
     .videoWrapper {
