--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,9 @@ footer {
         position:absolute;
         top:0;
         left:0;
-        width: 100%;
-        height: 91%;
+        width: 80%;
+        height: 80%;
+        margin-left: 10%;
     }
     
 }
@@ -195,12 +196,5 @@ footer {
         position: relative;
         text-align: center;
         padding-bottom: 56.25%;
-    }
-    iframe {
-        position:absolute;
-        top:0;
-        left:0;
-        width: 100%;
-        height: 91%;
     }
 }
