--- a/css/style.css
+++ b/css/style.css
@@ -74,36 +74,80 @@ footer {
     max-width: 100%;
 }
 /* The photo hover effect in the gallery section */
-.photohover {
-    position:relative;
-    float:left;
-    margin-right:10px;
-}
-.photohover div {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background: black;
-    color: white;
-    margin-bottom: 5px;
-    font-family: 'Playfair Display', serif;
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transition: visibility 0s, opacity 0.5s linear; 
-    transition: visibility 0s, opacity 0.5s linear;
-}
 
-.photohover:hover{
-    cursor: pointer;
-}
 
-.photohover:hover div{
-    width: 94.3%;
-    height: 94.5%;
-    padding: 8px 15px;
-    visibility: visible;
-    opacity: 0.7; 
-}
+figure.figurefx {
+    margin: 30px auto;
+      padding: 40px;
+      display: block;
+      position: relative;
+      overflow: hidden; /* hide overflowing elements by default */
+  }
+  
+  figure.figurefx figcaption {
+      position: absolute;
+      display: block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+      text-align: center;
+      background: rgb(224, 224, 224);
+      padding: 15px;
+      z-index: 100;
+      width: 50%;
+      max-height: 100%;
+      overflow: hidden;
+      top: 50%;
+      left: 40px;
+      -moz-transform: translate3d(-100%, -50%, 0); /* position caption outside layout horizontally and centered vertically */
+      -webkit-transform: translate3d(-100%, -50%, 0);
+      transform: translate3d(-100%, -50%, 0);
+      opacity: 0;
+      -moz-transition: all 0.5s;
+      -webkit-transition: all 0.5s;
+      transition: all 0.5s;
+  }
+  
+  figure.figurefx figcaption a {
+      text-decoration:none;
+  }
+  
+  /*** Push Up effect ****/
+  figure.pushup img {
+      -moz-transform: translate3d(0, 0, 0);
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      -moz-transition: all 0.5s;
+      -webkit-transition: all 0.5s;
+      transition: all 0.5s;
+  }
+  
+  figure.pushup figcaption {
+      top: 100%;
+      opacity: 1;
+      -moz-transform: translate3d(0, 0, 0);
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+  }
+  
+  
+  figure.pushup:hover img {
+      -moz-transform: translate3d(0, -20px, 0); /* move image up vertically a bit for parallax effect */
+      -webkit-transform: translate3d(0, -20px, 0);
+      transform: translate3d(0, -20px, 0);
+    opacity: .5;
+   
+  }
+  
+  figure.pushup:hover figcaption{
+      -moz-transform: translate3d(0, -177%, 0); /* move caption up vertically to fully reveal caption */
+      -webkit-transform: translate3d(0, -177%, 0);
+      transform: translate3d(0, -177%, 0);
+      -moz-transition: all 0.5s;
+      -webkit-transition: all 0.5s;
+      transition: all 0.5s;
+    box-shadow: 0px -2px 28px rgba(0, 0, 0, 0.3);
+  }
 /* lit section */
 
 #lit p::first-letter {
@@ -191,7 +235,7 @@ footer {
     }
     
 }
-@media screen and (min-width:768px) {
+@media screen and (min-width:300px) {
     #gallery figure {
         display:grid;
         grid-template-columns:  2fr 1fr;
